# SCS_Integrated_Digital_Cockpit

./: README.md  control.py
HeadUnit/: CMakeCache.txt  CMakeLists.txt  Makefile  basic_func.cpp  basic_func.h  bluetooth_page.qml  clicknotier.h  client.cpp  client.h  cmake_install.cmake  libxenvchan_wrapper.h  light_page.qml  main.cpp  main.qml  media_page.qml  media_page_youtube.qml  music_page.qml  music_player.h  pdc_page.qml  receiver.cpp  receiver.h  server.cpp  server.h  setting_page.qml  weather_provider.h
HeadUnit/.cmake/api/v1/reply/: target-HeadUnit-Debug-3bb54d34521b3ba922fd.json  target-HeadUnit_autogen-Debug-dafb9f4e7c1c61fecdc3.json
HeadUnit/HeadUnit_autogen/: moc_predefs.h
HeadUnit/HeadUnit_autogen/EWIEGA46WW/: moc_basic_func.cpp  moc_bluetoothmanager.cpp  moc_mirror_provider.cpp  moc_youtube_player.cpp
IC_TEST/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.2e46c93  DataProvider.h  DateClock.h  Gauge.cpp  Gauge.h  IC_TEST  IC_TEST.cbp  Makefile  Weather.h  client.cpp  client.h  cmake_install.cmake  get_battery.cpp  get_battery.h  main.cpp  main.qml  qml.qrc  receiver.cpp  receiver.h  server.cpp  server.h
IC_TEST/.cmake/api/v1/reply/: cache-v2-3d6f9c03e7a7e6a4c50c.json  cmakeFiles-v1-7f20bee4e5ecd7c7afe7.json  codemodel-v2-51670e8d8686fff0606d.json  index-2025-05-28T15-46-14-0062.json  target-IC_TEST-Debug-9d4091751373f440343b.json  target-IC_TEST_autogen-Debug-e38a0beba282475004ad.json
IC_TEST/IC_TEST_autogen/: moc_predefs.h  mocs_compilation.cpp
IC_TEST/IC_TEST_autogen/EWIEGA46WW/: moc_DataProvider.cpp  moc_DateClock.cpp  moc_Gauge.cpp  moc_Weather.cpp  moc_receiver.cpp  moc_server.cpp  qrc_qml.cpp
piracer-cpp/: CMakeLists.txt
piracer-cpp/cmake/modules/: Findpigpio.cmake
piracer-cpp/examples/: gamepad_control.cpp
poky/: .gitignore
poky/keys/: development-1.cert.pem  development-1.pem
poky/meta-HU/classes/: minam-image.bbclass
poky/meta-HU/conf/: layer.conf
poky/meta-HU/recipes-bsp/bootfiles/: rpi-config_git.bbappend
poky/meta-HU/recipes-core/images/: minam-image.bb  minam-image.bbappend
poky/meta-HU/recipes-kernel/linux/: linux-raspberrypi_6.1.bbappend
poky/meta-HU/recipes-kernel/linux/linux-raspberrypi/: base.dtb  bcm2835.h  cma-overlay.dts  edt-ft5406.dtsi  gpio.h  irq.h  mcp251xfd-overlay.dts  pin_bcm2835.h  spi0-2cs-overlay.dts  spi1-3cs-overlay.dts  vc4-fkms-v3d-overlay.dts  vc4-kms-dsi-7inch-overlay.dts  vc4-kms-dsi-waveshare-panel-overlay.dts  vc4-kms-v3d-overlay.dts  vc4-kms-v3d-pi4-overlay.dts
poky/meta-HU/recipes-support/hwdata/: hwdata_0.394.bb
poky/meta-HU/recipes-support/libdisplay-info/: libdisplay-info_0.2.0.bb
poky/meta-HU/recipes-v4l2/linux/: linux-raspberrypi_6.1.bbappend  linux-yocto_5.15.bbappend
poky/meta-HU/recipes-v4l2/linux/files/: can.cfg  mirroring.cfg  root@192.168.0.117  test.py  v4l2.cfg  xen.cfg  xendomu.cfg
poky/meta-HU/wic/: ab-partition.wks
poky/meta-control/conf/: layer.conf
poky/meta-control/recipes-control/: picpp.bb  pigpio.bb  pigpiocmake.bb
poky/meta-control/recipes-piracer/src/: blinka.bb  busdevice.bb  connectionmanager.bb  control.bb  framebuf.bb  ina219.bb  pca9685.bb  piracer.bb  platformdetect.bb  pygame.bb  pyserial.bb  requests.bb  ssd.bb  typing.bb  vchancontrol.bb
poky/meta-control/recipes-piracer/src/files/: Adafruit_Blinka.tar.xz  Adafruit_CircuitPython_BusDevice.tar.xz  Adafruit_CircuitPython_ConnectionManager-main.tar.xz  Adafruit_CircuitPython_INA219.tar.xz  Adafruit_CircuitPython_PCA9685.tar.xz  Adafruit_CircuitPython_Requests-main.tar.xz  Adafruit_CircuitPython_SSD1306.tar.xz  Adafruit_CircuitPython_Typing-main.tar.xz  Adafruit_CircuitPython_framebuf-main.tar.xz  Adafruit_Python_PlatformDetect-main.tar.xz  gpiotest.py  helloclient.service  piracer.service  piracer_py_v0.1.1.tar.xz  pyserial.tar.xz
poky/meta-env/conf/: layer.conf
poky/meta-env/recipes-connectivity/mirroring/: scrcpy_%.bbappend  scrcpy_3.2.bb
poky/meta-env/recipes-connectivity/mirroring/files/: 99-scrcpy.rules  scrcpy@.service
poky/meta-env/recipes-connectivity/wpa-supplicant/: wpa-supplicant_%.bbappend
poky/meta-env/recipes-login/src/: audiboot.bb  getty-service.bb
poky/meta-env/recipes-qt5/qt5/: qtbase_%.bbappend
poky/meta-env/recipes-qt5/qtquick/: qtquickcontrols2_git.bbappend
poky/meta-env/recipes-service/src/: vsomeip.bb
poky/meta-env/recipes-weston/src/: westo.bb
poky/meta-env/recipes-xenbridge/: xenauto.bb  xenbg.bb
poky/meta-env/recipes-xenbridge/files/: autobridgeassign.sh  bridge.service  domic.cfg  guest.cfg  huip.sh  icip.sh
poky/meta-gui/conf/: layer.conf
poky/meta-gui/recipes-client/src/: client.bb  clientsetting.bb  ichu.bb  mirroring.bb  serveric.bb
poky/meta-gui/recipes-hu/hu/: hu.bb  starthu.bb
poky/meta-gui/recipes-ic/: startic.bb
poky/meta-gui/recipes-ic/files/: icstart.service  startic.sh
poky/meta-gui/recipes-ic/src/: domclient.bb  ic.bb
poky/meta-qt5/recipes-qt/qt5/: qtlocation_git.bb  qtwebengine_git.bbappend
poky/meta-raspberrypi/recipes-bsp/bootfiles/: 0001-config.txt-reintroduce-start_x.patch  rpi-cmdline.bb
poky/meta-raspberrypi/recipes-connectivity/bluez5/: bluez5_%.bbappend
poky/meta-raspberrypi/recipes-multimedia/libcamera-apps/: rpi-libcamera-apps_git.bb
poky/meta-raspberrypi/wic/: ab-partition.wks  sdimage-raspberrypi.wks
poky/meta-rauc-raspberrypi/wic/: sdimage-dual-raspberrypi.wks.in
poky/meta/recipes-multimedia/pulseaudio/: pulseaudio_15.0.bb  pulseaudio_15.0.bbappend
vchan_test/: dom0_server.cpp
vchan_test/dom0_server/: CMakeLists.txt  Makefile  dom0_server.cpp
vchan_test/domu1_client/: CMakeLists.txt  Makefile  domu1_client.cpp
vnc_test/HeadUnit/: CMakeLists.txt  HeadUnit.cbp  bluetoothmanager.cpp  bluetoothmanager.h  client.h  main.cpp  main.qml  map_page.qml  media_contents.qrc  mirror_page.qml  mirror_provider.h  qml.qrc  server.h  usrinfo_page.qml  youtube_player.h
vnc_test/HeadUnit/HeadUnit_autogen/: mocs_compilation.cpp
vnc_test/HeadUnit/HeadUnit_autogen/EWIEGA46WW/: moc_clicknotier.cpp  moc_client.cpp  moc_music_player.cpp  moc_receiver.cpp  moc_weather_provider.cpp
(+29 files in other folders)
